--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/types": "^2.17.0",
     "@pinia/nuxt": "^0.4.11",
     "@types/node": "^18",
     "nuxt": "^3.6.0",
     "pinia": "^2.1.4",
     "sass": "^1.63.6",
+    "socket.io": "^4.7.1",
+    "socket.io-client": "^4.7.1",
     "typescript": "latest"
   },
   "overrides": {
