--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "ionic:build": "npm run build",
+    "ionic:serve": "npm run start"
   },
   "devDependencies": {
+    "@capacitor/cli": "5.1.0",
     "@nuxt/devtools": "latest",
     "@nuxt/types": "^2.17.0",
     "@pinia/nuxt": "^0.4.11",
@@ -22,5 +25,14 @@
   },
   "overrides": {
     "vue": "latest"
+  },
+  "version": "0.0.0",
+  "dependencies": {
+    "@capacitor/android": "5.1.0",
+    "@capacitor/app": "5.0.5",
+    "@capacitor/core": "5.1.0",
+    "@capacitor/haptics": "5.0.5",
+    "@capacitor/keyboard": "5.0.5",
+    "@capacitor/status-bar": "5.0.5"
   }
 }
